feat(interop): host-access policy, exception safety, and byte-for-byte stdlib conformance